package parkhouse.views;

public interface IObserver {

    /*
    Author: jstueh2s
     */

    void update();

}
